2001-09-12  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tcl.decls: reserved stub #481 for the implementation of
	[TIP 56]

2001-09-11  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* doc/OpenFileChnl.3: Added documentation for Tcl_WriteRaw and
	  Tcl_ReadRaw [#414929].
	
	* doc/CrtChannel.3: Added documentation for Tcl_ChannelBuffered
	  and Tcl_GetTopChannel [#414929].

	* The changes below are a fix for [219253].

	* tests/socket.test: Removed _most_ instances of hardwired port
	  numbers for listening sockets. Remaining are the ports in all
	  tests with constraint 'doTestsWithRemoteServer'. These seem to
	  be designed for a more controlled environment and are usually
	  skipped when running the testsuite.

	* tests/io.test: Removed all instances of hardwired port numbers
	  for listening sockets.

2001-09-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclEvent.c (TclInExit): Corrected handling of tsd in
	late stages of finalization.  [Bug #419449] (darley)

	* tests/stack.test:
	* generic/tclInterp.c (AliasObjCmd): Check the numLevels to ensure
	that we aren't hitting some alias loop condition.  [Bug #443184]

2001-09-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/configure: Regen.
	* unix/tcl.m4 (SC_CONFIG_CFLAGS): Don't include . characters
	in the Tcl library name when building on FreeBSD 3.X and later
	systems. [Patch 450725]

2001-09-10  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* doc/tclsh.1:
	* doc/Tcl_Main.3: 
	* doc/CrtChannel.3: 
	* doc/OpenFileChnl.3: 
	* doc/GetStdChan.3: Enhanced the manpages with cross-references to
	  the new manpage and more explanations how these functions deal
	  with the standard channels in various situations.

	* doc/StdChannels.3: New manpage describing handling of the
	  standard channels by the Tcl library [402725].

2001-09-10  Don Porter <dgp@users.sourceforge.net>

	* unix/mkLinks (Tcl_FSLink): Updated to reflect 2001-08-23
	file system changes.
