@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: appendComp.test,v 1.3 2001/07/03 23:39:24 hobbs Exp $
+# RCS: @(#) $Id: appendComp.test,v 1.4 2001/09/12 20:28:50 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -353,6 +353,7 @@ test appendComp-7.9 {append var does not trigger read trace} {
 
 catch {unset i x result y}
 catch {rename foo ""}
+catch {rename bar ""}
 catch {rename check ""}
 
 # cleanup
