@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: namespace.test,v 1.16 2001/05/15 14:19:14 msofer Exp $
+# RCS: @(#) $Id: namespace.test,v 1.17 2001/09/12 20:28:50 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -1138,6 +1138,7 @@ test namespace-40.1 {Ignoring namespace proc "unknown"} {
 
 test namespace-41.1 {Shadowing byte-compiled commands} {
     namespace eval ns {
+	set res {}
 	proc test {} {
 	    set ::g 0
 	}  
