@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: rename.test,v 1.9 2000/05/03 00:14:36 hobbs Exp $
+# RCS: @(#) $Id: rename.test,v 1.10 2001/09/12 20:28:50 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -75,6 +75,7 @@ test rename-3.5 {error conditions} {
 
 catch {rename unknown {}}
 catch {rename unknown.old unknown}
+catch {rename bar {}}
 
 if {[info command testdel] == "testdel"} {
     test rename-4.1 {reentrancy issues with command deletion and renaming} {
