@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: split.test,v 1.6 2000/04/10 17:19:04 ericm Exp $
+# RCS: @(#) $Id: split.test,v 1.7 2001/09/12 20:28:50 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -69,6 +69,7 @@ test split-2.2 {split errors} {
 } {1 {wrong # args: should be "split string ?splitChars?"} NONE}
 
 # cleanup
+catch {rename foo {}}
 ::tcltest::cleanupTests
 return
 
